# Steros-gui

./: .gitignore  CMakeLists.txt  Compile.sh  LICENSE  README.md
src/: app.c  app.h  button.c  button.h  ntdstring.h  steros.h  widget.h
src/helper/: option.h
src/ntd/: string.h
src/ui/: button.c  button.h
src/windowing/: window.c  window.h
test_src/: main.c
